--- a/src/app/pdf-generator/pdf-generator.component.html
+++ b/src/app/pdf-generator/pdf-generator.component.html
@@ -1,1 +1,3 @@
 <button (click)="generatePdf()">Generate PDF</button>
+
+<button (click)="generateSecondPdf()">Сгенерировать вторую таблицу PDF</button>
